--- a/index.html
+++ b/index.html
@@ -633,16 +633,16 @@ padding: 10px;*/
 	margin: 0;
 	
 }
-.block7-inner-content-pic-pic-pic, /*.block8-inner-content-pic-pic-pic, */.block9-inner-content-pic-pic-pic {
+.block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
 	width: 100%;
 	float: left;
 	height: 452px;
 }
-.block8-inner-content-pic-pic-pic {
+/*.block8-inner-content-pic-pic-pic {
 	width: 97.5%;
 	float: left;
 	height: 452px;
-}	
+}*/	
 .content50-pic-pic-pic {	
 	float: left;
 	position: relative;
@@ -652,7 +652,7 @@ padding: 10px;*/
 .content45-pic-pic-pic {	
 	float: left;
 	position: relative;
-	width: 47.5%;
+	width: 49.9%;
 	height: 452px;	
 }	
 .content25-pic-pic-pic {
@@ -816,7 +816,7 @@ padding: 10px;*/
 	margin: 0;
 }
 .block11-inner-content-nopic-pic {
-	width: 98.5%;
+	width: 100%;
 	float: left;
 	height: 192px;
 	position: relative;
@@ -824,7 +824,7 @@ padding: 10px;*/
 }
 .content64-nopic-pic {	
 	float: left;
-	width: 64%;
+	width: 63.99%;
 	height: 192px;
 	top: 0;
 	left:0;
@@ -833,7 +833,7 @@ padding: 10px;*/
 .content36-nopic-pic {
 	position: relative;
 	float: right;
-	width: 33.5%;
+	width: 36%;
 	height: 192px;
 	padding-right: 0;
 	box-sizing: border-box;
@@ -913,12 +913,12 @@ padding: 10px;*/
 }
 .block12-inner-content-pic-pic-pic-pic-pic{
     
-    width: 99%;
+    width: 100%;
     float:left;
     min-height: 350px;
 }
 .content20-pic-pic-pic-pic-pic{
-    width: 20%;
+    width: 19.998%;
     float:left;
 box-sizing: border-box;	
 }
@@ -926,7 +926,7 @@ box-sizing: border-box;
    display: block;
 	
 }
-.content17-pic-pic-pic-pic-pic{
+/*.content17-pic-pic-pic-pic-pic{
     width: 19%;
     float:left;
 box-sizing: border-box;	
@@ -934,7 +934,7 @@ box-sizing: border-box;
 .content17-pic-pic-pic-pic-pic img{
    display: block;
 	
-}		
+}*/		
 /*.block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
