--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@ a:hover {
 	width: auto;
 	height: 50px;
 	padding-left: 130px;
-	padding-bottom: 55px;
+	padding-bottom: 105px;
 	padding-top: 35px;
 }
 .block2-static-info {
 	float: right;
 	margin-top: 46px;
-	padding-right: 57px;
+	padding-right: 107px;/*57px;*/
 }
 .block2-title {
 	color: #000;
@@ -485,7 +485,7 @@ padding: 10px;*/
 	color: #333;
 	border-radius: 3px;
 	display: block;
-	width: 115px;
+	width: 145px;/*115px;*/
 	padding: 12px;
 	margin: 0 25px;
 	text-decoration: none;
