--- a/index.html
+++ b/index.html
@@ -1035,9 +1035,9 @@ box-sizing: border-box;
     padding-left: 10px;/*margin-left: 10px; =110%  2pice  problem result*/
 }                    
 .sidebar{
-    width: 15%;
+    width: 23%;
     float: left;
-    padding-right: 10px;
+    padding-right: 25px;
 }
 .inner-sidebar{
     border-right: 1px solid #ccc;
@@ -1064,12 +1064,12 @@ box-sizing: border-box;
     min-height: 350px;
 }*/
 .sidebar4 {    
-    width: 15%;
+    width: 23%;
     float: left;
-    padding-left: 10px;
+    padding-left: 0px;
 }
 .inner-sidebar4 {
-    border-right: 1px solid #ccc;
+    border-right: none;
     min-height: 350px;
 }
 .block15-subtitle-red{
@@ -1085,13 +1085,10 @@ box-sizing: border-box;
     color: #fff;
     font-size: 14px;
 }
-.inner-sidebar1 p > span, .inner-sidebar2 p > span, .inner-sidebar3 p > span { 
+.inner-sidebar1 p > span, .inner-sidebar2 p > span, .inner-sidebar3 p > span, .inner-sidebar4 p > span { 
     display: block;
 margin: 20px;
 	padding: 20px;
-}
-.inner-sidebar4 p > span{
-    border-right: none;
 }
 .block15-contacts-information-before-footer-t-t-t-t {
 	background: #242424;
@@ -1145,8 +1142,8 @@ margin: 20px;
             
                     </div>
                     </div> 
-                    <div class="sidebar4">
-                        <div class="inner-sidebar4"></div>
+                    <div class="sidebar">
+                        <div class="inner-sidebar"></div>
                         <p>
 							<span class="block15-title">Contact information</span>
                     
