--- a/index.html
+++ b/index.html
@@ -1091,11 +1091,11 @@ box-sizing: border-box;
     color: #fff;
     font-size: 14px;
 }
-.inner-sidebar1 p > span, .inner-sidebar2 p > span, .inner-sidebar3 p > span, .inner-sidebar4 p > span { 
+/*.inner-sidebar1 p > span, .inner-sidebar2 p > span, .inner-sidebar3 p > span, .inner-sidebar4 p > span { 
     display: block;
 margin: 20px;
 	padding: 20px;
-}
+}*/
 .block15-contacts-information-before-footer-t-t-t-t {
 	background: #242424;
 	padding: 0;
