--- a/index.html
+++ b/index.html
@@ -208,6 +208,31 @@ a:hover {
 		</style>
 		<div id="slider">
 			<div class="block3-navigation clearfix">
+				<nav>
+					<ul>
+						<li class="current">
+							<a href="/">Home</a>
+						</li>
+						<li>
+							<a href="/pages/about.php">About</a>
+						</li>
+						<li>
+							<a href="/pages/Products">Products</a>
+						</li>
+						<li>
+							<a href="/pages/Services">Services</a>
+						</li>
+						<li>
+							<a href="/pages/Rentals">Rentals</a>
+						</li>
+						<li>
+							<a href="/pages/Learning">Learning</a>
+						</li>
+						<li>
+							<a href="/pages/Contact">Contact</a>
+						</li>
+					</ul>
+				</nav>
 				<nav class="mobile-menu">
 					<ul>
 						<li class="current">
@@ -236,6 +261,7 @@ a:hover {
 				<div class="search">
 					<i aria-hidden="true" class="fa fa-search"></i>
 				</div>
+				
  <style>
     /*  BLOCK3  */
 #slider{ 
