--- a/index.html
+++ b/index.html
@@ -1104,17 +1104,19 @@ box-sizing: border-box;
 				/*  BLOCK16  */
 .lock16-footer{
     background: #131313;
-    padding: 50px 50px;
+    padding: 40px;
 }
 .r-footer {
     float: right;
     color: #fff;
-    font-size: 18px;
+    font-size: 14px;
+    padding-right: 65px;
 }
 .l-footer {
     float: left;
     color: #fff;
-    font-size: 18px;
+    font-size: 14px;
+    padding-left: 130px;
 }
 </style>
 
