--- a/index.html
+++ b/index.html
@@ -651,16 +651,11 @@ padding: 10px;*/
 	margin: 0;
 	
 }
-.block7-inner-content-pic-pic-pic, /*.block8-inner-content-pic-pic-pic, */.block9-inner-content-pic-pic-pic {
+.block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
 	width: 100%;
 	float: left;
 	height: 452px;
 }
-.block8-inner-content-pic-pic-pic {
-	width: 97.5%;
-	float: left;
-	height: 452px;
-}	
 .content50-pic-pic-pic {	
 	float: left;
 	position: relative;
@@ -670,7 +665,7 @@ padding: 10px;*/
 .content45-pic-pic-pic {	
 	float: left;
 	position: relative;
-	width: 47.5%;
+	width: 49.9%;
 	height: 452px;	
 }	
 .content25-pic-pic-pic {
@@ -1071,7 +1066,7 @@ box-sizing: border-box;
     padding-right: 40px;
 }
 .inner-sidebar{
-    border-right: 1px solid #ccc;
+    border-right: 1px solid hs1(0, 0%, 20%);
     min-height: 350px;
     padding-right: 30px;	
 } 
@@ -1202,6 +1197,8 @@ box-sizing: border-box;
    </div>
 </div> 	
 </section>
+
+<style>
 /*    END   */
 /*   RESPONSIVE   */
 /*@ -1---*//*
