--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ box-sizing: border-box;
     padding-right: 40px;
 }
 .inner-sidebar{
-    border-right: 1px solid hs1(0, 0%, 20%);
+    border-right: 1px solid #333;
     min-height: 350px;
     padding-right: 30px;	
 } 
