--- a/index.html
+++ b/index.html
@@ -76,10 +76,19 @@
 * {
 	margin: 0;
 	padding: 0;
-}			
+}
+html{
+
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
 	font: 400 14px/1.5 'Hind', sans-serif;
 	color: #565655;
+	width: 100%;
+   	 max-width: 100%;
+   	 overflow-x: hidden;
 }
 ul {
 	list-style: none;
