--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ html{
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
+    height: 100%;
+    max-height: 100%;
+    overflow-y: hidden;
 }
 body {
 	font: 400 14px/1.5 'Hind', sans-serif;
@@ -89,6 +92,9 @@ body {
 	width: 100%;
    	 max-width: 100%;
    	 overflow-x: hidden;
+	height: 100%;
+    max-height: 100%;
+    overflow-y: hidden;
 }
 ul {
 	list-style: none;
