--- a/index.html
+++ b/index.html
@@ -82,20 +82,21 @@ html{
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
-    /*height: 100%;
+    height: 100%;
     max-height: 100%;
-    overflow-y: hidden;*/
+    /*overflow-y: hidden;*/
 }
 body {
 	font: 400 14px/1.5 'Hind', sans-serif;
 	color: #565655;
 	width: 100%;
    	 max-width: 100%;
-	overflow-y:hidden;
-   	 /*overflow-x: hidden;
+	
+   	 overflow-x: hidden;
+	/*overflow-y:hidden;*/
 	height: 100%;
     max-height: 100%;
-    overflow-y: hidden*/;
+   /* overflow-y: hidden*/;
 }
 ul {
 	list-style: none;
