--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@ a:hover {
 		margin-right: 0;
 	}
 		</style>
+		<marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="150" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+   <div class='beg_stroka' align="middle" > 
 		<div id="slider">
 			<div class="block3-navigation clearfix">
 				<nav>
@@ -539,6 +541,11 @@ padding: 10px;*/
 	text-transform: uppercase;
 }
 </style>
+	   
+	   
+</div>
+</marquee>
+
 	</header>
 	<section>
 		    <div class="block6-logo-section-contacts-information1-text-nav clearfix">
