--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ a:hover {
 		margin-right: 0;
 	}
 		</style>
-		<marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="150" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
-   <div class='beg_stroka' align="middle" > 
+		<!--marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="150" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+   <div class='beg_stroka' align="middle" --> 
 		<div id="slider">
 			<div class="block3-navigation clearfix">
 				<nav>
@@ -336,7 +336,7 @@ font-size: 12px /*размер иконки 12 пикселей в ширину 
     line-height: 3.5;
     font-size: 19px;
 }
-/*@keyframes slidy {
+@keyframes slidy {
 0% { left: 0%; }
 20% { left: 0%; }
 25% { left: -30%; }
@@ -359,7 +359,7 @@ div#slider {
   text-align: left;
   font-size: 0;
   animation: 9000000000000000000000000000000000000000000000000000000000000000000000000000000000000000s slidy infinite; 
-}*/	 
+}	 
     </style>
 			</div><!--BLOCK4-->
 			<div class="block4-carusel">
@@ -543,8 +543,8 @@ padding: 10px;*/
 </style>
 	   
 	   
-</div>
-</marquee>
+<!--/div>
+</marquee-->
 
 	</header>
 	<section>
