--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ a:hover {
                     Menu <i class="fa fa-bars"></i>
                 </button-->
 		  
-				<nav class="mobile-menu">
+				<!--nav class="mobile-menu">
 					
 					<ul>
 						<li class="current">
@@ -281,7 +281,7 @@ a:hover {
 							<a href="/pages/Contact">Contact</a>
 						</li>
 					</ul>
-				</nav>
+				</nav-->
 				<div class="search">
 					<i aria-hidden="true" class="fa fa-search"></i>
 				</div>
