--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ padding: 10px;*/
 </style>
 
 
-	<section>
+	<section><marquee class="media" behavior="scroll" direction="left">
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
@@ -687,7 +687,7 @@ padding: 10px;*/
 				</div>
 			</div>
 		</div>
-	</section><!--10-bg#fffdfe-->
+	</marquee></section><!--10-bg#fffdfe-->
 <style>
 /*block 7*/
 .block7-content-pic-pic-pic, .block8-content-pic-pic-pic, .block9-content-pic-pic-pic {
