--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ padding: 10px;*/
 </style>
 
 
-	<section><marquee class="media" behavior="scroll" direction="left">
+	<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5">
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
