--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ padding: 10px;*/
 </style>
 
 
-	<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5">
+	<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
@@ -928,7 +928,7 @@ padding: 10px;*/
     display: inline-block;
 }
 </style>
-	
+<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">	
 <section>
     <div class="block12-content-pic-pic-pic-pic-pic clearfix" >
         <div class="block12-inner-content-pic-pic-pic-pic-pic">
@@ -960,7 +960,7 @@ padding: 10px;*/
                 </div>
             </div>
         </div>    
-    </div>
+    </div></marquee>
 </section>
 	<style>
 	/*  BLOCK12  h= 351PIC*/
@@ -1028,7 +1028,8 @@ box-sizing: border-box;
             </ul>                           
         </nav>            
     </div>
-</section>
+	
+</section></marquee>
 <style>
 	/*  BLOCK13  */
 	
@@ -1164,7 +1165,7 @@ box-sizing: border-box;
 
 <!--15-bg#242424-->
 	
-<section>
+<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">
 	<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
 
             <div class="sidebars">
@@ -1230,7 +1231,7 @@ box-sizing: border-box;
             </div>
            
         </div>
-   	
+   </marquee>	
    <div class="lock16-footer">
 	<div class="r-footer">
             <p>Copiright @ 2017 Sure Power Inc. All Rights Reserved. Employee Intranet<br></p>
