--- a/index.html
+++ b/index.html
@@ -1014,8 +1014,8 @@ box-sizing: border-box;
 }
 */
 </style>
-<section>
-    <div class="block13-static-info-dcs-cv-g-u-h clearfix">
+
+    <div class="block13-static-info-dcs-cv-g-u-h">
 
         <nav>
             <ul>
@@ -1059,7 +1059,8 @@ box-sizing: border-box;
 }
 	</style>	
 	<!--block14-->
-	<section>
+	<section><marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="250" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+   <div class='beg_stroka' align="middle" >
 		<div class="block14-contacts-information-logos clearfix">
 			<div class="block14-logos-social-icons">
 				<ul>
@@ -1080,7 +1081,7 @@ box-sizing: border-box;
 					</li>
 				</ul>
 			</div>
-		</div>
+		</div></div></marquee>
 	</section>
 	<style>		
 		
@@ -1165,7 +1166,7 @@ box-sizing: border-box;
 
 <!--15-bg#242424-->
 	
-<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">
+<section>
 	<div class="block15-contacts-information-before-footer-t-t-t-t clearfix">
 
             <div class="sidebars">
@@ -1231,7 +1232,7 @@ box-sizing: border-box;
             </div>
            
         </div>
-   </marquee>	
+   	
    <div class="lock16-footer">
 	<div class="r-footer">
             <p>Copiright @ 2017 Sure Power Inc. All Rights Reserved. Employee Intranet<br></p>
