--- a/index.html
+++ b/index.html
@@ -1059,11 +1059,11 @@ box-sizing: border-box;
 }
 	</style>	
 	<!--block14-->
-	<section><marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="250" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
-   <div class='beg_stroka' align="middle" >
+	<section>
 		<div class="block14-contacts-information-logos clearfix">
 			<div class="block14-logos-social-icons">
-				<ul>
+				<ul><marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="250" align="middle" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+   
 					<li>
 						<a href="#"><img src="img/enersys.png" alt=""></a>
 					</li>
@@ -1079,9 +1079,9 @@ box-sizing: border-box;
 					<li>
 						<a href="#"><img src="img/power.png" alt=""></a>
 					</li>
-				</ul>
+				</ul></marquee>
 			</div>
-		</div></div></marquee>
+		</div>
 	</section>
 	<style>		
 		
