--- a/index.html
+++ b/index.html
@@ -603,8 +603,8 @@ padding: 10px;*/
 }
 </style>
 
-
-	<section><marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">
+<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+	<section>
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
@@ -687,7 +687,7 @@ padding: 10px;*/
 				</div>
 			</div>
 		</div>
-	</marquee></section><!--10-bg#fffdfe-->
+	</section><!--10-bg#fffdfe-->
 <style>
 /*block 7*/
 .block7-content-pic-pic-pic, .block8-content-pic-pic-pic, .block9-content-pic-pic-pic {
@@ -846,7 +846,7 @@ padding: 10px;*/
 			margin-left: 7px;
 		}
 	</style>
-
+</marquee>
 <section>
     <div class="block11-content-nopic-pic clearfix">
         <div class="block11-inner-content-nopic-pic">
@@ -1062,8 +1062,7 @@ box-sizing: border-box;
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
 			<div class="block14-logos-social-icons">
-				<ul><marquee behavior="scroll" scrollAmount="5" direction="up" position="inherit"  width="auto" height="250" align="middle" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
-   
+				<ul>
 					<li>
 						<a href="#"><img src="img/enersys.png" alt=""></a>
 					</li>
@@ -1079,7 +1078,7 @@ box-sizing: border-box;
 					<li>
 						<a href="#"><img src="img/power.png" alt=""></a>
 					</li>
-				</ul></marquee>
+				</ul>
 			</div>
 		</div>
 	</section>
