--- a/index.html
+++ b/index.html
@@ -765,8 +765,9 @@ padding: 10px;*/
 	color: #fff;
 	font-size: 14px;
 	margin-top: 20px;
-}</style>
-	<section>   
+}</style></marquee>
+	<section><marquee class="media" behavior="scroll" direction="left" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+   
 		<div class="block10-static-info-sgr clearfix">
 			<div class="block10-sgr-logos">
 				<ul>
