--- a/index.html
+++ b/index.html
@@ -603,8 +603,9 @@ padding: 10px;*/
 }
 </style>
 
-<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
 	<section>
+<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+		
 		<div class="block7-content-pic-pic-pic clearfix">
 			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
@@ -635,6 +636,9 @@ padding: 10px;*/
 </section>
 <section>  
     <div class="block8-content-pic-pic-pic clearfix"-->
+</marquee>			
+<marquee class="media" behavior="scroll" direction="right" bgcolor="#000" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+			
 			<div class="block8-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content25-pic-pic-pic">
@@ -662,6 +666,10 @@ padding: 10px;*/
 </section>
 <section>  
     <div class="block9-content-pic-pic-pic clearfix"-->
+			
+</marquee>			
+<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
+			
 			<div class="block9-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
@@ -766,8 +774,7 @@ padding: 10px;*/
 	font-size: 14px;
 	margin-top: 20px;
 }</style></marquee>
-	<section><marquee class="media" behavior="scroll" direction="left" scrollamount="5" position="inherit"  width="auto" height="" onMouseOver="this.scrollAmount=0" onMouseOut="this.scrollAmount=3">
-   
+	<section>
 		<div class="block10-static-info-sgr clearfix">
 			<div class="block10-sgr-logos">
 				<ul>
@@ -847,7 +854,7 @@ padding: 10px;*/
 			margin-left: 7px;
 		}
 	</style>
-</marquee>
+
 <section>
     <div class="block11-content-nopic-pic clearfix">
         <div class="block11-inner-content-nopic-pic">
@@ -929,7 +936,7 @@ padding: 10px;*/
     display: inline-block;
 }
 </style>
-<marquee class="media" behavior="scroll" direction="left" bgcolor="#000" scrollamount="3">	
+	
 <section>
     <div class="block12-content-pic-pic-pic-pic-pic clearfix" >
         <div class="block12-inner-content-pic-pic-pic-pic-pic">
@@ -961,7 +968,7 @@ padding: 10px;*/
                 </div>
             </div>
         </div>    
-    </div></marquee>
+    </div>
 </section>
 	<style>
 	/*  BLOCK12  h= 351PIC*/
@@ -1030,7 +1037,7 @@ box-sizing: border-box;
         </nav>            
     </div>
 	
-</section></marquee>
+</section>
 <style>
 	/*  BLOCK13  */
 	
