--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ font-size: 12px /*размер иконки 12 пикселей в ширину 
 70% { left: -60%; }
 75% { left: -70%; }
 95% { left: -80%; }
-100% { left: -120%; }
+100% { left: -100%; }
 }
 body { margin: 0; } 
 div#slider { overflow: hidden; }
@@ -240,6 +240,7 @@ div#slider figure img { width: 100%; float: left; }
 div#slider { 
   position: relative;
   width: 100%;
+	height: 100%;
 	
   margin: 0;
   left: 0;
