--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 </head>
 <body>
 
+function click(){
+    var test;
+    let name  = [1,2,3];
+    let a = {
+        age: 22,
+            name: "Inna"
+    };
+    console.log(test());
+    /*return test();*/
+    function test()
+    {
+        return 22;
+    };
+}
+/*anonimus*/
+
+(function click1() {
+
+
+    console.log(22)
+})();
+
+
 		<!--BLOCK1-->
 		
 		<style>
